[metadata]
name = octavia-tempest-plugin
summary = Tempest plugin for Octavia
description_file =
    README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://docs.openstack.org/octavia-tempest-plugin/latest/
python_requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[global]
setup_hooks =
    pbr.hooks.setup_hook

[files]
packages =
    octavia_tempest_plugin

[compile_catalog]
directory = octavia_tempest_plugin/locale
domain = octavia_tempest_plugin

[update_catalog]
domain = octavia_tempest_plugin
output_dir = octavia_tempest_plugin/locale
input_file = octavia_tempest_plugin/locale/octavia_tempest_plugin.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = octavia_tempest_plugin/locale/octavia_tempest_plugin.pot

[build_releasenotes]
all_files = 1
build-dir = releasenotes/build
source-dir = releasenotes/source

[entry_points]
tempest.test_plugins =
    octavia-tempest-plugin = octavia_tempest_plugin.plugin:OctaviaTempestPlugin
